# Projeto_BD

./: CMakeLists.txt  README.md
include/models/: author.hpp  book.hpp  cashier.hpp  client.hpp  inventory.hpp  manager.hpp  sale.hpp  user.hpp
scripts/: ai_script.lua  interface.lua  test.lua
src/: author.cpp  book.cpp  cashier.cpp  client.cpp  inventory.cpp  main.cpp  manager.cpp  user.cpp
src/classes/: author.hpp  book.hpp  cashier.hpp  client.hpp  inventory.hpp  manager.hpp  sale.hpp  user.hpp
src/database/: database.cpp  database.hpp  database.sql
src/models/: author.cpp  book.cpp  cashier.cpp  inventory.cpp  manager.cpp  sale.cpp
